--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "ajv": "^8.12.0",
+    "ajv-formats": "^3.0.1",
+    "axios": "^1.11.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.303.0",
     "next": "^15.3",
     "openai": "^4.24.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-select": "^5.10.2",
     "styled-components": "^6.1.6"
   },
   "devDependencies": {
