--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "openai": "^4.24.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.6.0",
     "react-select": "^5.10.2",
     "styled-components": "^6.1.6"
   },
