--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.11.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.303.0",
-    "next": "^15.3",
+    "next": "15.3.6",
     "openai": "^4.24.1",
     "react": "^18",
     "react-dom": "^18",
