--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ajv": "^8.12.0",
     "ajv-formats": "^3.0.1",
     "axios": "^1.11.0",
+    "firebase": "^12.8.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.303.0",
     "next": "15.3.6",
